TA-438 Simplified updating task status
* Remove dedicated endpoints to rejected and reopen task
