# core/src/main/resources/openapi/openapi-spec.yml
@@ -2209,102 +2209,6 @@ paths:
               schema:
                 $ref: "#/components/schemas/ValidatorError"
 
-  /projects/{projectId}/stages/{stageId}/tasks/{taskId}/reject:
-    post:
-      tags:
-        - task
-      summary: Reject task
-      operationId: rejectTask
-      parameters:
-        - name: projectId
-          in: path
-          description: "A unique identifier of the project"
-          required: true
-          style: simple
-          explode: false
-          schema:
-            type: integer
-            format: int64
-        - name: stageId
-          in: path
-          description: "A unique identifier of the stage"
-          required: true
-          style: simple
-          explode: false
-          schema:
-            type: integer
-            format: int64
-        - name: taskId
-          in: path
-          description: "A unique identifier of the task"
-          required: true
-          style: simple
-          explode: false
-          schema:
-            type: integer
-            format: int64
-      responses:
-        200:
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Task"
-        400:
-          description: Validator error message
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ValidatorError"
-
-  /projects/{projectId}/stages/{stageId}/tasks/{taskId}/reopen:
-    post:
-      tags:
-        - task
-      summary: Reopen task
-      operationId: reopenTask
-      parameters:
-        - name: projectId
-          in: path
-          description: "A unique identifier of the project"
-          required: true
-          style: simple
-          explode: false
-          schema:
-            type: integer
-            format: int64
-        - name: stageId
-          in: path
-          description: "A unique identifier of the stage"
-          required: true
-          style: simple
-          explode: false
-          schema:
-            type: integer
-            format: int64
-        - name: taskId
-          in: path
-          description: "A unique identifier of the task"
-          required: true
-          style: simple
-          explode: false
-          schema:
-            type: integer
-            format: int64
-      responses:
-        200:
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Task"
-        400:
-          description: Validator error message
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ValidatorError"
-
   /supervisions:
     post:
       tags:
